package edu.guia.solid.isp.adapter;

public interface Scanner {
    String scan();
}
